@@ -2,17 +2,17 @@ package com.itm.biblioteca.service.impl;
 
 import com.itm.biblioteca.model.Editorial;
 import com.itm.biblioteca.repository.EditorialRepository;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
@@ -26,80 +26,101 @@ class EditorialServiceImplTest {
     @InjectMocks
     private EditorialServiceImpl editorialService;
 
-    private Editorial editorial;
-
-    @BeforeEach
-    void setUp() {
-        editorial = new Editorial();
-        editorial.setId("ED-001");
-        editorial.setNombre("Editorial ITM");
-        editorial.setDireccion("Calle 73 # 76A - 354");
-        editorial.setTelefono("1234567"); // 7 dígitos para que pase tu validación
-    }
-
     @Test
-    void listarTodos() {
-        when(editorialRepository.findAll()).thenReturn(Arrays.asList(editorial));
+    @DisplayName("Debe listar todas las editoriales")
+    void listarTodos_RetornaListaDeEditoriales() {
+        // GIVEN
+        Editorial ed = new Editorial();
+        ed.setId("ED-001");
+        ed.setNombre("Editorial ITM");
+        when(editorialRepository.findAll()).thenReturn(List.of(ed));
 
+        // WHEN
         List<Editorial> resultado = editorialService.listarTodos();
 
-        assertNotNull(resultado);
-        assertEquals(1, resultado.size());
-        verify(editorialRepository).findAll();
+        // THEN
+        assertThat(resultado).isNotEmpty();
+        assertThat(resultado.size()).isEqualTo(1);
+        verify(editorialRepository, times(1)).findAll();
     }
 
     @Test
-    void buscarPorId() {
-        when(editorialRepository.findById("ED-001")).thenReturn(Optional.of(editorial));
+    @DisplayName("Debe buscar una editorial por su ID")
+    void buscarPorId_RetornaEditorialExistente() {
+        // GIVEN
+        String id = "ED-001";
+        Editorial editorial = new Editorial();
+        editorial.setId(id);
+        editorial.setNombre("Editorial ITM");
+        when(editorialRepository.findById(id)).thenReturn(Optional.of(editorial));
 
-        Optional<Editorial> encontrada = editorialService.buscarPorId("ED-001");
+        // WHEN
+        Optional<Editorial> encontrada = editorialService.buscarPorId(id);
 
+        // THEN
         assertTrue(encontrada.isPresent());
-        assertEquals("Editorial ITM", encontrada.get().getNombre());
+        assertThat(encontrada.get().getNombre()).isEqualTo("Editorial ITM");
+        verify(editorialRepository, times(1)).findById(id);
     }
 
     @Test
-    void crear() {
+    @DisplayName("Debe crear una editorial correctamente")
+    void crear_RetornaEditorialGuardada() {
+        // GIVEN
+        Editorial nueva = new Editorial();
+        nueva.setId("ED-001");
+        nueva.setNombre("Editorial ITM");
+        nueva.setTelefono("1234567"); // 7 dígitos
+
         when(editorialRepository.existsById("ED-001")).thenReturn(false);
-        when(editorialRepository.save(any(Editorial.class))).thenReturn(editorial);
+        when(editorialRepository.save(any(Editorial.class))).thenReturn(nueva);
 
-        Editorial creada = editorialService.crear(editorial);
+        // WHEN
+        Editorial creada = editorialService.crear(nueva);
 
+        // THEN
         assertNotNull(creada);
-        assertEquals("ED-001", creada.getId());
+        assertThat(creada.getId()).isEqualTo("ED-001");
+        verify(editorialRepository, times(1)).save(any(Editorial.class));
+    }
+
+    @Test
+    @DisplayName("Debe actualizar los datos de una editorial existente")
+    void actualizar_RetornaEditorialActualizada() {
+        // GIVEN
+        String id = "ED-001";
+        Editorial datosNuevos = new Editorial();
+        datosNuevos.setNombre("ITM Universitario");
+
+        Editorial editorialExistente = new Editorial();
+        editorialExistente.setId(id);
+        editorialExistente.setNombre("Editorial ITM");
+        editorialExistente.setDireccion("Calle 73");
+
+        when(editorialRepository.findById(id)).thenReturn(Optional.of(editorialExistente));
+        when(editorialRepository.save(any(Editorial.class))).thenAnswer(i -> i.getArguments()[0]);
+
+        // WHEN
+        Editorial resultado = editorialService.actualizar(id, datosNuevos);
+
+        // THEN
+        assertThat(resultado.getNombre()).isEqualTo("ITM Universitario");
+        assertThat(resultado.getDireccion()).isEqualTo("Calle 73"); // Se mantiene igual
         verify(editorialRepository).save(any(Editorial.class));
     }
 
     @Test
-    void crearFallaPorTelefonoCorto() {
+    @DisplayName("Debe eliminar una editorial si existe")
+    void eliminar_LlamaAlRepositorioSiExiste() {
+        // GIVEN
+        String id = "ED-001";
+        when(editorialRepository.existsById(id)).thenReturn(true);
+        doNothing().when(editorialRepository).deleteById(id);
 
-        editorial.setTelefono("123");
+        // WHEN
+        editorialService.eliminar(id);
 
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            editorialService.crear(editorial);
-        });
-
-        assertEquals("El teléfono debe tener al menos 7 dígitos.", exception.getMessage());
-    }
-
-    @Test
-    void actualizar() {
-        when(editorialRepository.findById("ED-001")).thenReturn(Optional.of(editorial));
-        when(editorialRepository.save(any(Editorial.class))).thenReturn(editorial);
-
-        Editorial resultado = editorialService.actualizar("ED-001", editorial);
-
-        assertNotNull(resultado);
-        verify(editorialRepository).save(any(Editorial.class));
-    }
-
-    @Test
-    void eliminar() {
-        when(editorialRepository.existsById("ED-001")).thenReturn(true);
-        doNothing().when(editorialRepository).deleteById("ED-001");
-
-        editorialService.eliminar("ED-001");
-
-        verify(editorialRepository).deleteById("ED-001");
+        // THEN
+        verify(editorialRepository, times(1)).deleteById(id);
     }
 }
